--- a/SoftWare/STM32MCU/Dev/SoftWare.ioc
+++ b/SoftWare/STM32MCU/Dev/SoftWare.ioc
@@ -141,6 +141,8 @@ Dma.USART6_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART6_TX.3.PeriphInc=DMA_PINC_DISABLE
 Dma.USART6_TX.3.Priority=DMA_PRIORITY_LOW
 Dma.USART6_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+FATFS.IPParameters=_CODE_PAGE
+FATFS._CODE_PAGE=936
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;appTask1Ms,-3,1024,StartappTask1Ms,Default,NULL,Dynamic,NULL,NULL
@@ -153,21 +155,22 @@ Mcu.CPN=STM32F407VET6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
-Mcu.IP10=USART1
-Mcu.IP11=USART2
-Mcu.IP12=USART3
-Mcu.IP13=USART6
-Mcu.IP14=USB_OTG_FS
-Mcu.IP15=USB_OTG_HS
-Mcu.IP2=FREERTOS
-Mcu.IP3=I2C1
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=TIM7
-Mcu.IP8=UART4
-Mcu.IP9=UART5
-Mcu.IPNb=16
+Mcu.IP10=UART5
+Mcu.IP11=USART1
+Mcu.IP12=USART2
+Mcu.IP13=USART3
+Mcu.IP14=USART6
+Mcu.IP15=USB_HOST
+Mcu.IP16=USB_OTG_FS
+Mcu.IP2=FATFS
+Mcu.IP3=FREERTOS
+Mcu.IP4=I2C1
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SYS
+Mcu.IP8=TIM7
+Mcu.IP9=UART4
+Mcu.IPNb=17
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -200,13 +203,13 @@ Mcu.Pin32=PB14
 Mcu.Pin33=PB15
 Mcu.Pin34=PD8
 Mcu.Pin35=PD9
-Mcu.Pin36=PD13
-Mcu.Pin37=PD14
-Mcu.Pin38=PD15
-Mcu.Pin39=PC6
+Mcu.Pin36=PD11
+Mcu.Pin37=PD13
+Mcu.Pin38=PD14
+Mcu.Pin39=PD15
 Mcu.Pin4=PE6
-Mcu.Pin40=PC7
-Mcu.Pin41=PA8
+Mcu.Pin40=PC6
+Mcu.Pin41=PC7
 Mcu.Pin42=PA10
 Mcu.Pin43=PA11
 Mcu.Pin44=PA12
@@ -229,13 +232,15 @@ Mcu.Pin59=PB9
 Mcu.Pin6=PC15-OSC32_OUT
 Mcu.Pin60=PE0
 Mcu.Pin61=PE1
-Mcu.Pin62=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin63=VP_SYS_VS_tim6
-Mcu.Pin64=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin62=VP_FATFS_VS_USB
+Mcu.Pin63=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin64=VP_SYS_VS_tim6
+Mcu.Pin65=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin66=VP_USB_HOST_VS_USB_HOST_MSC_FS
 Mcu.Pin7=PH0-OSC_IN
 Mcu.Pin8=PH1-OSC_OUT
 Mcu.Pin9=PC1
-Mcu.PinsNb=65
+Mcu.PinsNb=67
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -259,6 +264,7 @@ NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
@@ -324,11 +330,6 @@ PA6.Locked=true
 PA6.Signal=GPIO_Output
 PA7.Locked=true
 PA7.Signal=ETH_CRS_DV
-PA8.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA8.GPIO_Label=PA8-ETH-RESET
-PA8.GPIO_PuPd=GPIO_PULLUP
-PA8.Locked=true
-PA8.Signal=GPIO_Output
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=ADC_1
 PB0.Locked=true
@@ -344,10 +345,8 @@ PB12.Signal=ETH_TXD0
 PB13.Locked=true
 PB13.Signal=ETH_TXD1
 PB14.Locked=true
-PB14.Mode=Host_FS
 PB14.Signal=USB_OTG_HS_DM
 PB15.Locked=true
-PB15.Mode=Host_FS
 PB15.Signal=USB_OTG_HS_DP
 PB5.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
 PB5.GPIO_Label=STM32_I2C1_WP
@@ -420,6 +419,8 @@ PD0.GPIO_Label=M_HX711_DATA_1
 PD0.GPIO_PuPd=GPIO_PULLUP
 PD0.Locked=true
 PD0.Signal=GPIO_Input
+PD11.Locked=true
+PD11.Signal=GPIO_Output
 PD13.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD13.GPIO_Label=STM32_KEY_1
 PD13.GPIO_PuPd=GPIO_PULLUP
@@ -584,7 +585,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM7_Init-TIM7-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_USART6_UART_Init-USART6-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_UART5_Init-UART5-false-HAL-true,11-MX_USB_OTG_FS_HCD_Init-USB_OTG_FS-false-HAL-true,12-MX_USB_OTG_HS_HCD_Init-USB_OTG_HS-false-HAL-true,13-MX_UART4_Init-UART4-false-HAL-true,14-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM7_Init-TIM7-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_USART6_UART_Init-USART6-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_UART5_Init-UART5-false-HAL-true,11-MX_UART4_Init-UART4-false-HAL-true,12-MX_USART3_UART_Init-USART3-false-HAL-true,13-MX_FATFS_Init-FATFS-false-HAL-false,14-MX_USB_HOST_Init-USB_HOST-false-HAL-false
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -637,16 +638,32 @@ USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 USART6.IPParameters=VirtualMode
 USART6.VirtualMode=VM_ASYNC
+USB_HOST.BSP.number=1
+USB_HOST.IPParameters=USBH_HandleTypeDef-MSC_FS,VirtualModeFS
+USB_HOST.USBH_HandleTypeDef-MSC_FS=hUsbHostFS
+USB_HOST.VirtualModeFS=Msc
+USB_HOST0.BSP.STBoard=false
+USB_HOST0.BSP.api=Unknown
+USB_HOST0.BSP.component=
+USB_HOST0.BSP.condition=
+USB_HOST0.BSP.instance=PD11
+USB_HOST0.BSP.ip=GPIO
+USB_HOST0.BSP.mode=Output
+USB_HOST0.BSP.name=Drive_VBUS_FS
+USB_HOST0.BSP.semaphore=
+USB_HOST0.BSP.solution=PD11
 USB_OTG_FS.IPParameters=VirtualMode,phy_itface
 USB_OTG_FS.VirtualMode=Host_Only
 USB_OTG_FS.phy_itface=HCD_PHY_EMBEDDED
-USB_OTG_HS.IPParameters=VirtualMode-Host_FS
-USB_OTG_HS.VirtualMode-Host_FS=Host_FS
+VP_FATFS_VS_USB.Mode=USB
+VP_FATFS_VS_USB.Signal=FATFS_VS_USB
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
+VP_USB_HOST_VS_USB_HOST_MSC_FS.Mode=MSC_FS
+VP_USB_HOST_VS_USB_HOST_MSC_FS.Signal=USB_HOST_VS_USB_HOST_MSC_FS
 board=custom
 rtos.0.ip=FREERTOS
